hphp/test/zend/good/ext/bz2/tests/002.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded("bz2")) print "skip";
}
