hphp/test/zend/bad/ext/zlib/tests/bug_52944-darwin.php.skipif
<?php if (!extension_loaded("zlib")) print "skip"; ?>
<?php
if (PHP_OS != 'Darwin') {
	die("skip Darwin only");
}